--- a/front-end/src/app/forms/form-99/reason/reason.component.scss
+++ b/front-end/src/app/forms/form-99/reason/reason.component.scss
@@ -10,6 +10,10 @@
   .grid-row {
     margin-left: 0;
     margin-right: 0;
+    .grid-row__col {
+      padding-left: 0;
+      padding-right: 0;
+    }
   }
   header {
     .header-container {
@@ -20,10 +24,10 @@
       }
       @include media(mediumDesktop) {
         width: 100%;
-      }         
+      }
       @include media(largeDesktop) {
         width: 100%;
-      }       
+      }
       .header__text {
         float: none;
         display: block;
@@ -39,12 +43,12 @@
           float: left;
           font-size: 1em;
           width: 50%;
-        }         
+        }
         @include media(largeDesktop) {
           float: left;
           font-size: 1em;
           width: 50%;
-        }         
+        }
       }
       .header__btns {
         display: block;
@@ -62,12 +66,12 @@
           float: left;
           text-align: right;
           width: 50%;
-        }         
+        }
         @include media(largeDesktop) {
           float: left;
           text-align: right;
           width: 50%;
-        }         
+        }
         .btn-print-preview {
           @extend .btn-secondary-gray;
           margin-right: 5px;
@@ -86,6 +90,10 @@
     .content {
       display: block;
       width: 100%;
+      .info-row {
+        padding-top: 15px;
+        padding-right: 25px;
+      }
       .validate__form {
         &.show-alerts {
           display: block;
@@ -94,10 +102,10 @@
           }
           @include media(mediumDesktop) {
             display: none;
-          }         
+          }
           @include media(largeDesktop) {
             display: none;
-          }           
+          }
         }
         background-color: $bombay;
         display: none;
@@ -109,15 +117,15 @@
           display: none;
           height: 80px;
           margin-top: 10px;
-          width: 100%;        
+          width: 100%;
         }
         @include media(mediumDesktop) {
           display: none;
-        }         
+        }
         @include media(largeDesktop) {
           display: none;
-        }         
-      }      
+        }
+      }
       .text-editor {
         margin-left: auto;
         margin-right: auto;
@@ -131,36 +139,21 @@
           padding: 10px;
           width: 90%;
           @include media(tablet) {
-            width: 96%;
+            width: 94%;
           }
           @include media(mediumDesktop) {
-            width: 96%;
-          }         
-          @include media(largeDesktop) {
-            width: 96%;
-          }           
-        }
-        /* .angular-editor {
-          z-index: 0;
-          .angular-editor-toolbar {
-            .angular-editor-toolbar-set {
-              select[title='Custom Style'],
-              .angular-editor-button[title='Insert Image'],
-              .angular-editor-button[title='Insert Link'],
-              .angular-editor-button[title='Unlink'],
-              .angular-editor-button[title='HTML Code'] {
-                display: none;
-              }
-
-            }
+            width: 94%;
           }
-        } */
+          @include media(largeDesktop) {
+            width: 94%;
+          }
+        }
         @include clearfix();
-      } // .rich-text-editor
+      } // .text-editor
 
       .file-attached-container {
         .close-icon {
-          // @extend .close-icon;          
+          // @extend .close-icon;
           color: $red;
           vertical-align: top
         }
@@ -174,10 +167,10 @@
         }
         @include media(mediumDesktop) {
           max-width: 500px;
-        }         
+        }
         @include media(largeDesktop) {
           max-width: 600px;
-        }               
+        }
       }
       .editor-character-count,
       .error-text {
@@ -186,7 +179,7 @@
       .error-text {
         padding-left: 20px;
       }
-    } // .content  
+    } // .content
   } // section
   footer {
     margin-top: 20px;
@@ -206,15 +199,15 @@
             width: 98%;
             .btn-right {
               margin-right: 20px;
-            }              
-          }         
+            }
+          }
           @include media(largeDesktop) {
             width: 98%;
             .btn-right {
               margin-right: 20px;
-            }              
-          }          
-        }       
+            }
+          }
+        }
       }
     }
 }
