Fixing form 3x UI

--- a/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.html
@@ -52,6 +52,13 @@
       <div class="grid-row" *ngIf="formOptionsVisible">
         <div class="grid-row__col grid-row__col--11">
             <div class="forms__btn-container">
+            <button
+              class="btn btn-previous btn-left"
+              type="button"
+              (click)="previousStep()"
+            >
+              Previous
+            </button>
               <button
                 class="btn btn-primary btn-right"
                 type="submit"
