--- a/front-end/src/app/shared/partials/steps/steps.component.html
+++ b/front-end/src/app/shared/partials/steps/steps.component.html
@@ -3,8 +3,6 @@
     *ngFor="let step of steps"
     [ngClass]="(step.step === current_step)? 'current ' + step.step : step.step"
   >
-    <div>
-      {{ step.text }}
-    </div>
+    <div [innerHTML]="step.text"></div>
   </li>
 </ul>
