--- a/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.html
@@ -1,10 +1,11 @@
-<div class="transaction-type" *ngIf="showForm">
-  <form
-    [formGroup]="frmOption"
-    (ngSubmit)="doValidateOption()"
-    (blur)="doValidateOption()"
-  >
-    <section>
+<div class="transaction-type">
+  <section>
+    <form
+      [formGroup]="frmOption"
+      (ngSubmit)="doValidateOption()"
+      (blur)="doValidateOption()"
+      *ngIf="showForm"
+    >
       <div class="form-content">
         <div class="grid-row">
           <div class="grid-row__col grid-row__col--12">
@@ -47,27 +48,28 @@
             </li>
           </ul>
       </div>
-    </section>
-    <footer>
-      <div class="grid-row" *ngIf="formOptionsVisible">
-        <div class="grid-row__col grid-row__col--11">
-            <div class="forms__btn-container">
+    </form>
+  </section>
+  <footer>
+    <div class="grid-row">
+      <div class="grid-row__col grid-row__col--11">
+          <div class="forms__btn-container">
+          <button
+            class="btn btn-previous btn-left"
+            type="button"
+            (click)="previousStep()"
+          >
+            Previous
+          </button>
             <button
-              class="btn btn-previous btn-left"
-              type="button"
-              (click)="previousStep()"
+              class="btn btn-primary btn-right"
+              type="submit"
+               *ngIf="formOptionsVisible"
             >
-              Previous
+              Next
             </button>
-              <button
-                class="btn btn-primary btn-right"
-                type="submit"
-              >
-                Next
-              </button>
-            </div>
-        </div>
+          </div>
       </div>
-    </footer>
-  </form>
+    </div>
+  </footer>
 </div>
