--- a/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.scss
+++ b/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.scss
@@ -2,6 +2,8 @@
 
 .transaction-type-container {
   .forms__btn-container {
-    padding-left: 10px;
+    height: 100%;
+    margin-bottom: 10px;
+    padding-left: 20px;
   }
 }
