Fne 196 262 fixes mahendra sprint6 (#151)
* for FNE 196 and 262

for FNE 196 and 262

* for FNE 196 and 262

for FNE 196 and 262

* FNE192 and FNE 262

FNE192 and FNE 262

* for FNE 196 and FNE 262

for FNE 196 and FNE 262

* For FNE196 and FNE 262

* for FNE 196 and FNE 262

for FNE 196 and FNE 262

* FNE196 and FNE 262

FNE196 and FNE 262

--- a/front-end/src/app/forms/form-3x/report-type/report-type.component.html
+++ b/front-end/src/app/forms/form-3x/report-type/report-type.component.html
@@ -28,9 +28,9 @@
                 formControlName="reportTypeRadio"
               />
               <label
-                for="{{committee_form3x_reporttype.rpt_type_desc}}"
+                for="{{committee_form3x_reporttype.report_type_desciption}}"
               >
-              {{committee_form3x_reporttype.rpt_type_desc}}
+              {{committee_form3x_reporttype.report_type_desciption}}
               </label>
               <button
                 type="button"
