Fne 196 262 fixes updated mahendra sprint6 (#156)
* FNE 192 and 262 bug fixes

FNE 192 and 262 bug fixes

* FNE 192 and 262 bug fixes

FNE 192 and 262 bug fixes

* FNE 192 and 262 bug fixes

FNE 192 and 262 bug fixes

* FNE 192 and 262 bug fixes

FNE 192 and 262 bug fixes

* FNE 192 and 262 bug fixes

FNE 192 and 262 bug fixes

* FNE 192 and 262 bug fixes

FNE 192 and 262 bug fixes

* FNE 192 and 262 bug fixes

FNE 192 and 262 bug fixes

* FNE 192 and 262 bug fixes

FNE 192 and 262 bug fixes

* FNE 192 and 262 bug fixes

FNE 192 and 262 bug fixes

--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -4,6 +4,11 @@
       <report-type-sidebar
           title="Report Coverage Dates"
           (status)='onNotify($event)'
+          [searchField]="searchField"
+          [sidebarLinks]="sidebarLinks"
+          [specialreports]="specialreports"  
+          [regularreports]="regularreports"
+          
         >
       </report-type-sidebar>
     </div>
