--- a/front-end/src/app/shared/partials/sidebar/sidebar.component.html
+++ b/front-end/src/app/shared/partials/sidebar/sidebar.component.html
@@ -140,7 +140,11 @@
                  </button>
                 <ng-template #f99Content>
                   {{committee_form.form_info}}
-                </ng-template>
+                  <a href= "{{committee_form.form_pdf_url}}"  target="_blank">Instructions</a>.
+                  <i class="external-link-icon" aria-hidden="true">
+                   <span class="sr-only">Link opens in new window.</span>
+                  </i>
+                </ng-template>                
               </div>
             </li>
           </ul>
