--- a/front-end/src/app/forms/form-3x/report-type/report-type.component.html
+++ b/front-end/src/app/forms/form-3x/report-type/report-type.component.html
@@ -1,8 +1,8 @@
 <div class="report-type-container" *ngIf="showForm">
   <form
     [formGroup]="frmReportType"
-    (ngSubmit)="doValidatereportType()"
-    (blur)="doValidatereportType()"
+    (ngSubmit)="doValidateOption()"
+    (blur)="doValidateOption()"
   >
     <section>
       <div class="form-content">
@@ -10,7 +10,7 @@
           <div class="grid-row__col grid-row__col--12">
             <div class="text-error text-center"
               *ngIf="(frmReportType.invalid && (frmReportType.dirty || frmReportType.touched)) || (optionFailed)">
-              You must select a repoty type for filing.
+              You must select a report type for filing.
             </div>
           </div>
         </div>
@@ -35,7 +35,7 @@
               <button
                 type="button"
                 class="btn-info"
-                ngbTooltip=" {{committee_form3x_reporttype.rpt_type_info}}"
+                ngbTooltip=" {{committee_form3x_reporttype.report_type_info}}"
 
               >
                 <i class="info-icon" aria-hidden="true"></i>
