--- a/front-end/src/app/shared/partials/Report-type-sidebar/Report-type-sidebar.component.html
+++ b/front-end/src/app/shared/partials/Report-type-sidebar/Report-type-sidebar.component.html
@@ -5,67 +5,142 @@
   </header>
   <section><!-- Start: Wizard Sidebar Report Coverage Dates -->
     <form class="sidebar-form-content">
+       <div class="form-row" *ngIf="(regularreports===true)">
+ 
+        <div class="form-row">
+          <label for="dateFrom">Date From* <i class="fas fa-info-circle"></i></label>
+          <button
+          type="button"
+          class="btn-info"
+          ngbTooltip="Language will be provided by RAD"
+  
+        >
+          <i class="info-icon" aria-hidden="true"></i>
+          <span class="sr-only">
+            Click for more information
+          </span>
+        </button>
+        </div>
+        <div class="form-row">
+          <i class="fas fa-calendar-alt"></i>
+          <input type="date" 
+          name="txttodate" 
+          value=""
+          class="form-control" 
+          aria-label="Contribution Date"/>
+        </div>
+        <div class="form-row">
+          <label for="dateTo">Date To* <i class="fas fa-info-circle"></i></label>
+          <button
+          type="button"
+          class="btn-info"
+          ngbTooltip="Language will be provided by RAD"
+  
+        >
+          <i class="info-icon" aria-hidden="true"></i>
+          <span class="sr-only">
+            Click for more information
+          </span>
+        </button>
+        </div>
+        <div class="form-row">
+          <i class="fas fa-calendar-alt"></i>
+          <input type="date" 
+          name="txtfromdate" 
+          value=""
+          class="form-control" 
+          aria-label="Contribution Date">
+        </div>
+          
+          <div class="form-row" *ngIf="cashOnHand?.showCashOnHand"> 
+          <div class="form-sidebar-item__text">
+            {{ cashOnHand.text }}
+          </div>
+          <div class="form-sidebar-item__value">
+            ${{ cashOnHand.amount }}
+          </div>
+        </div>  
+    </div> <!-- regular reports-->
+    
+    <div class="form-row" *ngIf="specialreports===true">
+        <div class="form-row">
+            <label for="State">State*</label>
+            <button
+        type="button"
+        class="btn-info"
+        ngbTooltip="Language will be provided by RAD"
+
+      >
+        <i class="info-icon" aria-hidden="true"></i>
+        <span class="sr-only">
+          Click for more information
+        </span>
+      </button>
+        </div>
       <div class="form-row">
-        <label for="State">State*</label>
-      </div>
-      <div class="form-row">
-        <select id="state" name="state" class="form-control">
+          <select id="state" name="state" class="form-control">
           <option value="---">--- </option>
-          <option value="Alabama">Alabama</option>
-          <option value="Alaska">Alaska </option>
-          <option value="Arizona">Arizona</option>
-          <option value="Arkansas">Arkansas</option>
-          <option value="California">California</option>
-          <option value="Colorado">Colorado</option>
-          <option value="Connecticut">Connecticut</option>
-          <option value="Delaware">Delaware</option>
-          <option value="District of Columbia">District of Columbia</option>
-          <option value="Florida">Florida</option>
-          <option value="Georgia">Georgia</option>
-          <option value="Guam">Guam</option>
-          <option value="Hawaii">Hawaii</option>
-          <option value="Idaho">Idaho</option>
-          <option value="Illinois">Illinois</option>
-          <option value="Indiana">Indiana</option>
-          <option value="Iowa">Iowa</option>
-          <option value="Kansas">Kansas</option>
-          <option value="Kentucky">Kentucky</option>
-          <option value="Louisiana">Louisiana</option>
-          <option value="Maine">Maine</option>
-          <option value="Maryland">Maryland</option>
-          <option value="Massachusetts">Massachusetts</option>
-          <option value="Michigan">Michigan</option>
-          <option value="Minnesota">Minnesota</option>
-          <option value="Mississippi">Mississippi</option>
-          <option value="Missouri">Missouri</option>
-          <option value="Montana">Montana</option>
-          <option value="Nebraska">Nebraska</option>
-          <option value="Nevada">Nevada</option>
-          <option value="New Hampshire">New Hampshire</option>
-          <option value="New Jersey">New Jersey</option>
-          <option value="New Mexico">New Mexico</option>
-          <option value="New York">New York</option>
-          <option value="North Carolina">North Carolina</option>
-          <option value="North Dakota">North Dakota</option>
-          <option value="Northern Marianas Islands">Northern Marianas Islands</option>
-          <option value="Ohio">Ohio</option>
-          <option value="Oklahoma">Oklahoma</option>
-          <option value="Oregon">Oregon</option>
-          <option value="Pennsylvania">Pennsylvania</option>
-          <option value="Puerto Rico">Puerto Rico</option>
-          <option value="Rhode Island">Rhode Island</option>
-          <option value="South Carolina">South Carolina</option>
-          <option value="South Dakota">South Dakota</option>
-          <option value="Tennessee">Tennessee</option>
-          <option value="Texas">Texas</option>
-          <option value="Utah">Utah</option>
-          <option value="Vermont">Vermont</option>
-          <option value="Virginia">Virginia</option>
-          <option value="Virgin Islands">Virgin Islands</option>
-          <option value="Washington">Washington</option>
-          <option value="West Virginia">West Virginia</option>
-          <option value="Wisconsin">Wisconsin</option>
-          <option value="Wyoming">Wyoming</option>
+          <option value="AL">Alabama</option>
+          <option value="AK">Alaska </option>
+          <option value="AS">American Samoa</option>
+          <option value="AZ">Arizona</option>
+          <option value="AR">Arkansas</option>
+          <option value="CA">California</option>
+          <option value="CO">Colorado</option>
+          <option value="CT">Connecticut</option>
+          <option value="DE">Delaware</option>
+          <option value="DC">District of Columbia</option>
+          <option value="FL">Florida</option>
+          <option value="GA">Georgia</option>
+          <option value="GU">Guam</option>
+          <option value="HI">Hawaii</option>
+          <option value="ID">Idaho</option>
+          <option value="IL">Illinois</option>
+          <option value="IN">Indiana</option>
+          <option value="IA">Iowa</option>
+          <option value="KS">Kansas</option>
+          <option value="KY">Kentucky</option>
+          <option value="LA">Louisiana</option>
+          <option value="ME">Maine</option>
+          <option value="MP">Northern Mariana Islands</option>
+          <option value="MD">Maryland</option>
+          <option value="MA">Massachusetts</option>
+          <option value="MI">Michigan</option>
+          <option value="MN">Minnesota</option>
+          <option value="MS">Mississippi</option>
+          <option value="MO">Missouri</option>
+          <option value="MT">Montana</option>
+          <option value="NE">Nebraska</option>
+          <option value="NV">Nevada</option>
+          <option value="NH">New Hampshire</option>
+          <option value="NJ">New Jersey</option>
+          <option value="NM">New Mexico</option>
+          <option value="NY">New York</option>
+          <option value="NC">North Carolina</option>
+          <option value="ND">North Dakota</option>
+          <option value="OH">Ohio</option>
+          <option value="OK">Oklahoma</option>
+          <option value="OR">Oregon</option>
+          <option value="PA">Pennsylvania</option>
+          <option value="PR">Puerto Rico</option>
+          <option value="RI">Rhode Island</option>
+          <option value="SC">South Carolina</option>
+          <option value="SD">South Dakota</option>
+          <option value="TN">Tennessee</option>
+          <option value="TX">Texas</option>
+          <option value="UT">Utah</option>
+          <option value="VT">Vermont</option>
+          <option value="VI">Virginia</option>
+          <option value="VA">Virgin Islands</option>
+          <option value="WA">Washington</option>
+          <option value="WV">West Virginia</option>
+          <option value="WI">Wisconsin</option>
+          <option value="WY">Wyoming</option>
+          <option value="ZZ">Foreign Countries</option>
+          <option value="US">United States</option>
+          <option value="AA">Armed Forces Americas</option>
+          <option value="AE">Armed Forces Europe</option>
+          <option value="AP">Armed Forces Pacific</option>
         </select>
       </div>
       <div class="form-row">
@@ -73,25 +148,99 @@
           Election Date
           <i class="fas fa-info-circle"></i>
         </label>
+        <button
+        type="button"
+        class="btn-info"
+        ngbTooltip="Language will be provided by RAD"
+
+      >
+        <i class="info-icon" aria-hidden="true"></i>
+        <span class="sr-only">
+          Click for more information
+        </span>
+      </button>
+     
       </div>
       <div class="form-row">
-        <i class="fas fa-calendar-alt"></i>
-        <input type="text" class="form-control" aria-label="Contribution Date"/>
+          <select id="electiondate" name="state" class="form-control">
+              <option value="---">--- </option>
+          </select> 
+        
       </div>
       <div class="form-row">
         <label for="dateFrom">Date From* <i class="fas fa-info-circle"></i></label>
+        <button
+        type="button"
+        class="btn-info"
+        ngbTooltip="Language will be provided by RAD"
+
+      >
+        <i class="info-icon" aria-hidden="true"></i>
+        <span class="sr-only">
+          Click for more information
+        </span>
+      </button>
       </div>
       <div class="form-row">
         <i class="fas fa-calendar-alt"></i>
-        <input type="text" class="form-control" aria-label="Contribution Date"/>
+        <input type="date" 
+        name="txttodate" 
+        value=""
+        class="form-control" 
+        aria-label="Contribution Date"/>
       </div>
       <div class="form-row">
         <label for="dateTo">Date To* <i class="fas fa-info-circle"></i></label>
+        <button
+        type="button"
+        class="btn-info"
+        ngbTooltip="Language will be provided by RAD"
+
+      >
+        <i class="info-icon" aria-hidden="true"></i>
+        <span class="sr-only">
+          Click for more information
+        </span>
+      </button>
       </div>
       <div class="form-row">
         <i class="fas fa-calendar-alt"></i>
-        <input type="text" class="form-control" aria-label="Contribution Date">
+        <input type="date" 
+        name="txtfromdate" 
+        value=""
+        class="form-control" 
+        aria-label="Contribution Date">
       </div>
+  
+      <div class="form-row" *ngIf="cashOnHand?.showCashOnHand"> 
+      <div class="form-sidebar-item__text">
+        {{ cashOnHand.text }}
+      </div>
+      <div class="form-sidebar-item__value">
+        ${{ cashOnHand.amount }}
+      </div>
+    </div>  
+  </div> <!-- special reports-->
+   <!-- buttons started here-->
+    <div class="form-sidebar__btns">
+    <div class="btn-row">
+      <button
+        type="button"
+        class="btn btn-secondary-gray"
+      >
+        Summary
+      </button>
+    </div>
+    <br />
+    <div class="btn-row">
+      <button
+        type="button"
+        class="btn btn-secondary"
+      >
+        Sign &amp; Submit
+      </button>
+    </div>
+  </div>
     </form>
   </section>
 </div>
