Fne 196 262 fixes updated mahendra sprint6 (#158)
* FNE 192 and 262 bug fixes

FNE 192 and 262 bug fixes

* FNE 192 and 262 bug fixes

FNE 192 and 262 bug fixes

* FNE 192 and 262 bug fixes

FNE 192 and 262 bug fixes

* FNE 192 and 262 bug fixes

FNE 192 and 262 bug fixes

* FNE 192 and 262 bug fixes

FNE 192 and 262 bug fixes

* FNE 192 and 262 bug fixes

FNE 192 and 262 bug fixes

* FNE 192 and 262 bug fixes

FNE 192 and 262 bug fixes

* FNE 192 and 262 bug fixes

FNE 192 and 262 bug fixes

* FNE 192 and 262 bug fixes

FNE 192 and 262 bug fixes

* compile error fixing

compile error fixing

* FNE 192 and 262 bug fixes

FNE 192 and 262 bug fixes

* FNE 192 and 262 bug fixes

FNE 192 and 262 bug fixes

--- a/front-end/src/app/shared/partials/Report-type-sidebar/Report-type-sidebar.component.html
+++ b/front-end/src/app/shared/partials/Report-type-sidebar/Report-type-sidebar.component.html
@@ -8,7 +8,7 @@
        <div class="form-row" *ngIf="(regularreports===true)">
  
         <div class="form-row">
-          <label for="dateFrom">Date From* <i class="fas fa-info-circle"></i></label>
+          <label for="dateFrom">Date From* </label>
           <button
           type="button"
           class="btn-info"
@@ -30,7 +30,7 @@
           aria-label="Contribution Date"/>
         </div>
         <div class="form-row">
-          <label for="dateTo">Date To* <i class="fas fa-info-circle"></i></label>
+          <label for="dateTo">Date To* </label>
           <button
           type="button"
           class="btn-info"
