--- a/front-end/src/app/forms/forms.component.html
+++ b/front-end/src/app/forms/forms.component.html
@@ -1,10 +1,10 @@
 <div class="forms-container__main">
   <div class="form__main-content">
-    <div *ngIf="form_type === '99'">
+    <div *ngIf="formType === '99'">
       <!-- begin form 99 -->
       <app-form-99></app-form-99>
     </div>
-    <div *ngIf="form_type === '3X'">
+    <div *ngIf="formType === '3X'">
     	<app-f3x></app-f3x>
     </div>
   </div>
